  with the index of the element.
  (Léo Andrès, review by Alain Frisch)

### Other libraries:

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

- #9074: reworded error message for non-regular structural types
  (Florian Angeletti, review by Jacques Garrigue and Leo White,
   report by Chas Emerick)

### Internal/compiler-libs changes:

### Build system:

### Bug fixes:

- #7683, #1499: Fixes one case where the evaluation order in native-code
  may not match the one in bytecode.
  (Nicolás Ojeda Bär, report by Pierre Chambart, review by Gabriel Scherer)

OCaml 4.10.0
------------

(Changes that can break existing programs are marked with a "*")

### Language features

- #7557, #1726: multi-indices for extended indexing operators
  (Florian Angeletti, review by Gabriel Radanne)

* #1859: --enable-force-safe-string is now the default. This can be
  overridden at configure time only (introduced by 4.04 in 2016).
  Unless --disable-force-safe-string is used at configure time, this
  breaks code that use the '-unsafe-string' argument and C stubs that
  use String_val as a char* instead of const char*
  (Kate Deplaix)

- #6662, #8908: Add "module _ = X" syntax
  (Thomas Refis, review by Gabriel Radanne)

- #8993: New C functions caml_process_pending_actions{,_exn} in
  caml/signals.h, intended for executing all pending actions inside
  long-running C functions (requested minor and major collections,
  signal handlers, finalisers, and memprof callbacks). The function
  caml_process_pending_actions_exn returns any exception arising
  during their execution, allowing resources to be cleaned-up before
  re-raising.
  (Guillaume Munch-Maccagnoni, review by Jacques-Henri Jourdan,
   Stephen Dolan, and Gabriel Scherer)

### Internal/compiler-libs changes:

- #8844: Printing faulty constructors, inline records fields and their types
  during type mismatches. Also slightly changed other type mismatches error
  output.